<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
<ImageView
        android:id="@+id/menu_fond"
        android:src="@drawable/menu_fond"
        android:contentDescription="@string/descr_fond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
         />

<!--  BOTTOM TO TOP -->
<ImageButton
   	    android:id="@+id/menu_retour"
   	    android:src="@drawable/menu_retour"
   	    android:background="@android:color/transparent"
   	    android:contentDescription="@string/descr_retour"
   	    android:adjustViewBounds= "true"
   	    android:scaleType="fitXY"
    	android:layout_width="wrap_content"
  	  	android:layout_height="wrap_content"
  	  	android:layout_marginBottom="@dimen/menu_item_margin_bottom"
  	  	android:layout_marginTop="@dimen/menu_item_spacing"
  	  	android:maxHeight="@dimen/menu_item_size"
  	  	android:layout_alignParentBottom = "true"
  	  	android:layout_alignParentRight = "true"
		android:visibility="gone" />

<ImageButton
   	    android:id="@+id/menu_boule_jaune"
   	    android:src="@drawable/menu_boule_jaune"
   	    android:background="@android:color/transparent"
   	    android:contentDescription="@string/itemChooseYellow"
   	    android:adjustViewBounds= "true"
   	    android:scaleType="fitXY"
    	android:layout_width="wrap_content"
  	  	android:layout_height="wrap_content"
  	  	android:layout_marginTop="@dimen/menu_item_spacing"
  	  	android:maxHeight="@dimen/menu_item_size"
  	  	android:layout_alignParentRight = "true"
  	  	android:layout_above = "@id/menu_retour"
  	  	android:visibility="gone" />

<ImageButton
   	    android:id="@+id/menu_boule_blanche"
   	    android:src="@drawable/menu_boule_blanche"
   	    android:background="@android:color/transparent"
   	    android:contentDescription="@string/itemChooseWhite"
   	    android:adjustViewBounds= "true"
   	    android:scaleType="fitXY"
    	android:layout_width="wrap_content"
  	  	android:layout_height="wrap_content"
  	  	android:layout_marginTop="@dimen/menu_item_spacing"
  	  	android:maxHeight="@dimen/menu_item_size"
  	  	android:layout_alignParentRight = "true"
  	  	android:layout_above = "@id/menu_boule_jaune"
  	  	android:visibility="gone" />



<!--  BOTTOM TO TOP -->
<ImageButton
   	    android:id="@+id/menu_quitter"
   	    android:src="@drawable/menu_quitter"
   	    android:background="@android:color/transparent"
   	    android:contentDescription="@string/descr_quitter"
   	    android:adjustViewBounds= "true"
   	    android:scaleType="fitXY"
    	android:layout_width="wrap_content"
  	  	android:layout_height="wrap_content"
  	  	android:layout_marginBottom="@dimen/menu_item_margin_bottom"
  	  	android:layout_marginTop="@dimen/menu_item_spacing"
  	  	android:maxHeight="@dimen/menu_item_size"
  	  	android:layout_alignParentBottom = "true"
  	  	android:layout_alignParentRight = "true" />

<ImageButton
   	    android:id="@+id/menu_multijoueur"
   	    android:src="@drawable/menu_multijoueur"
   	    android:background="@android:color/transparent"
   	    android:contentDescription="@string/descr_multijoueur"
   	    android:adjustViewBounds= "true"
   	    android:scaleType="fitXY"
    	android:layout_width="wrap_content"
  	  	android:layout_height="wrap_content"
  	  	android:layout_marginTop="@dimen/menu_item_spacing"
  	  	android:maxHeight="@dimen/menu_item_size"
  	  	android:layout_alignParentRight = "true"
  	  	android:layout_above = "@id/menu_quitter" />

<ImageButton
   	    android:id="@+id/menu_entrainement"
   	    android:src="@drawable/menu_entrainement"
   	    android:background="@android:color/transparent"
   	    android:contentDescription="@string/descr_entrainement"
   	    android:adjustViewBounds= "true"
   	    android:scaleType="fitXY"
    	android:layout_width="wrap_content"
  	  	android:layout_height="wrap_content"
  	  	android:layout_marginTop="@dimen/menu_item_spacing"
  	  	android:maxHeight="@dimen/menu_item_size"
  	  	android:layout_alignParentRight = "true"
  	  	android:layout_above = "@id/menu_multijoueur" />

<ImageButton
   	    android:id="@+id/menu_meilleur_coup"
   	    android:src="@drawable/menu_meilleur_coup"
   	    android:background="@android:color/transparent"
   	    android:contentDescription="@string/descr_meilleur_coup"
   	    android:adjustViewBounds= "true"
   	    android:scaleType="fitXY"
    	android:layout_width="wrap_content"
  	  	android:layout_height="wrap_content"
  	  	android:maxHeight="@dimen/menu_item_size"
  	  	android:layout_alignParentRight = "true"
  	  	android:layout_above = "@id/menu_entrainement" />

</RelativeLayout>
